[package]
name = "pallet-ibc-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallet-ibc = { version = "4.0.0-dev", path = "../core", default-features = false }
pallet-ics20 = { version = "4.0.0-dev", path = "../app/transfer", default-features = false, optional = true }
ibc-proto = { version = "0.30.0", default-features = false, features = ["parity-scale-codec"]  }
pallet-ibc-utils = { version = "0.1.0", default-features = false, path = "../utils" }


# substrate crates
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate.git", branch = "master" }


[features]
default = ["std"]
std = [
    "pallet-ibc/std",
    "pallet-ics20/std",
    "pallet-ibc-utils/std",
    "ibc-proto/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-timestamp/std",
]
ics20 = ["pallet-ics20"]
