[package]
name = "ibc-support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc = { version = "0.50.0", default-features = false, features = [
    "parity-scale-codec",
    "serde",
] }

# substrate crates
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }
frame-support = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.7.0" }

[features]
default = ['std']
std = ["ibc/std", "codec/std", "sp-std/std", "frame-support/std"]
runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
