[package]
name = "pallet-ibc-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.29.0"
anyhow = "1.0.71"


[dev-dependencies]
tokio = "1"
ibc = { version = "0.41.0", default-features = false, features = ["parity-scale-codec", "serde"] }
