[package]
name = "pallet-ibc-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages
sp-api = { version = '3.0'}
sp-blockchain = { version = '3.0'  }
sp-rpc = { version = '3.0' }
sp-runtime = { version = '3.0' }

# local packages
pallet-ibc-runtime-api = { path  = "../runtime-api" }