[package]
name = "pallet-ibc-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# Substrate packages
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"}
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12"  }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

# local packages
pallet-ibc-runtime-api = { path  = "../runtime-api" }
